Import translations. DO NOT MERGE
Change-Id: I723b11c00bf0d75fedde3e8cc88fa5ba5b9ee0cd
Auto-generated-cl: translation import

--- a/InCallUI/res/values-am/strings.xml
+++ b/InCallUI/res/values-am/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"ያዝናቆይ"</string>
     <string name="unknown" msgid="6878797917991465859">"ያልታወቀ"</string>
     <string name="private_num" msgid="6713286113000232309">"የግል ቁጥር"</string>
-    <string name="payphone" msgid="1931775086311769314">"የክፍያ ስልክ"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"መስመሩ ተይዟል"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"አውታረመረብ ተይዟል"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ምንም ምላሽ የለም፣ ጊዜው አልቋል"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"አገልጋይ አይደረስበትም"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"ቁጥር አይደረስበትም"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"የተሳሳየ ተጠቃሚ ስም እና ይለፍ ቃል"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"ከአውታረ መረብ ውጪ የተደወለ"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"የአግልጋይ ስህተት፣ እባክዎ በድጋሚ ቆይተው ይሞክሩ።"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"ምንም አመልካች የለም"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM ወሰንአልፏል"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ሬዲዮ ጠፍቷል"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"ምንም SIM ፣ ወይም የSIM ስህተት የለም"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"የተንቀሳቃሽ ስልክ አውታረ መረብ አይገኝም"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"ወጪ ጥሪዎች በFDN ተከልክለዋል።"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"የጥሪ ክልከላ በርቶ ሳለ የወጪ ጥሪ ማድረግ አትችልም።"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ሁሉም ጥሪዎች በመድረሻ መቆጣጠሪያ የተከለከሉ ናቸው።"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"የአደጋ ጊዜ ጥሪዎች በድረስ መቆጣጠሪያተከልክልዋል።"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"መደበኛ ጥሪዎች በድረስ መቆጣጠሪያ ተከልክልዋል።"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"ተቀባይነት የሌለው ቁጥር"</string>
+    <string name="payphone" msgid="4793877574636445118">"የሕዝብ ስልክ"</string>
     <string name="confCall" msgid="1904840547188336828">"የስብሰባ ጥሪ"</string>
-    <string name="call_lost" msgid="317670617901479594">"ጥሪ ተቋርጣል።"</string>
-    <string name="ok" msgid="3811371167865772377">"እሺ"</string>
+    <string name="call_lost" msgid="6183862117003999578">"ጥሪው ተቋርጧል።"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"ድምጽ ማጉያ"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"የስልክ እጀታ ጆሮማዳመጫ"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"ባለ ገመድ የጆሮ ማዳመጫ"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"የስብሰባ ጥሪ<xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"የድምፅ መልዕክት ቁጥር"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"በመደወል ላይ"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"እንደገና በመሞከር ላይ"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"ዳግም በመደወል ላይ"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"የስብሰባ ጥሪ"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"ገቢ ጥሪ"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"ጥሪ አብቅቷል"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"በመዝጋት ላይ"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"ጥሪ ላይ"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"ቁጥሬ<xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> ነው"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"ቪድዮ በማገናኘት ላይ"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"የቪዲዮ ጥሪ"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ቪድዮ በመጠየቅ ላይ"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"የቪዲዮ ጥሪን ማገናኘት አልተቻለም"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"የእርስዎ የመልሶ መደወያ ቁጥር\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"የእርስዎ የድንገተኛ አደጋ መልሶ መደወያ ቁጥር\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"በመደወል ላይ"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"ያመለጠጥሪ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"ያመለጡ ጥሪዎች"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"እየተካሄደ ያለ ጥሪ"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"ያዝናቆይ"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ገቢ ጥሪ"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"ገቢ የቪዲዮ ጥሪ"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"ገቢ የቪዲዮ ጥያቄ"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"አዲስ የድምፅ መልዕክት"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"አዲስ የድምፅ መልዕክት<xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"ደውል <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"የማይታወቅ የድምፅ መልዕክት ቁጥር"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"ምንም አገልግሎት የለም"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"የተመረጠ አውታረመረብ(<xliff:g id="OPERATOR_NAME">%s</xliff:g>) የለም"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"መልስ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"ዝጋ"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"ቪድዮ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"ድምፅ"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ተቀበል"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"አሰናብት"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"መልሰህ ደውል"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"መልዕክት"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ለመደወል፣ መጀመሪያየአውሮፕላኑን ሁነታ አጥፋ።"</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"በአውታረ መረቡ ላይ አልተመዘገበም።"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"የተንቀሳቃሽ አደራጅ የለም።"</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"ጥሪ አልተላከም፣ ትክክለኛ ቁጥር አልገባም።"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"ጥሪ አልተላከም።"</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"የተንቀሳቃሽ ስልክ አውታረ መረብ አይገኝም።"</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"አንድ ጥሪ ለማድረግ የሚሰራ ቁጥር ያስገቡ።"</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"መደወል አልተቻለም።"</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"የMMI sequence…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"የማይደገፍ አገልግሎት።"</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"ጥሪዎችን ለመቀያየር አልተቻለም።"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"ጥሪዎችን ለመለየት አልተቻለም።"</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"ጥሪዎችን ለመስደድ አልተቻለም።"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ለስብሰባ ጥሪዎች አልተቻለም።"</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ጥሪ አለመቀበል አልተቻለም።"</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ጥሪ(ዎችን) ለመተው አልተቻለም።"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"የድምጽ መልዕክት ቁጥር አይታወቅም።"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"የበይነመረብ  ጥሪ"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"አገልግሎት አይደገፍም።"</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"ጥሪዎችን መቀያየር አልተቻለም።"</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"ጥሪን መለየት አልተቻለም።"</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"ማስተላለፍ አልተቻለም።"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"የጉባዔ ጥሪ ማድረግ አልተቻለም።"</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"ጥሪውን መዝጋት አልተቻለም።"</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"ጥሪ(ዎች)ን መልቀቅ አልተቻለም።"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"የSIP ጥሪ"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"የአደጋ ጊዜ ጥሪ"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ሬዲዮ ክፈት"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"ከአገልግሎት መስጫ ክልል ውጪ፣ ድጋሚ በመሞከር ላይ..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"ጥሪ አልተላከም፣ <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> የአደጋ  ቁጥር አይደለም!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"ጥሪ አልተላከም፣ እባክህ የአደጋ ጊዜ ቁጥር ደውል።"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"ምንም አገልግሎት የለም። ዳግም በመሞከር ላይ…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"መደወል አልተቻለም። <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> የአስቸኳይ አደጋ ቁጥር አይደለም።"</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"መደወል አልተቻለም። ወደ የአስቸኳይ አደጋ ቁጥር ይደውሉ።"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ለመደወል የሰሌዳ ቁልፍ ተጠቀም"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"ጥሪ አቆይ"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"ጥሪ ቀጥል"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"ጥሪ አክል"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"ጥሪዎችን አዋህድ"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"ጥሪዎችን ቀያይር"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"ያዝ"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"መጨረሻ"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"የመደወያ ሰሌዳ"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"ጥሪዎችን አዋህድ"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"ማገላበጥ"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"ጥሪዎችን አደራጅ"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"ስብሰባ አደራጅ"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"የስብሰባ ስልክ ጥሪ አቀናብር"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ኦዲዮ"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"የቪዲዮ ጥሪ"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"ወደ ድምጽ ጥሪ ይለውጡ"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"ካሜራ ቀይር"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"ቪድዮ ለአፍታ አቁም"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"ተጨማሪ አማራጮች"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"አገልግሎት"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"አዋቅር"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;አልተዘጋጀም &gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"የእራስዎን ይጻፉ..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"ይቅር"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"ላክ"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"አንድ"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"ሁለት"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"ሦስት"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"አራት"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"አምስት"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"ስድስት"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"ሰባት"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"ስምንት"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"ዘጠኝ"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ኮከብ"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"ዜሮ"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"ፓውንድ"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"ደውል"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"የኋሊት ደምሳሽ"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"የስልክ ድምፅ ማጉያ ነቅቷል።"</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"ጥሪ ፀጥ  ብሏል"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"መልስ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS ላክ"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"አትቀበል"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"እንደ ቪድዮ ጥሪ ይመልሱ"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"እንደ ድምጽ ጥሪ ይመልሱ"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"የቪዲዮ ጥያቄ ተቀበል"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"የቪዲዮ ጥያቄ አትቀበል"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"ለ<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ወደ ላይ ያንሸራትቱ።"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"ለ<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ወደ ግራ ያንሸራትቱ።"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"ለ<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ወደ ቀኝ ያንሸራትቱ።"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"ለ<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> ወደ ታች ያንሸራትቱ።"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"ንዘር"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"ንዘር"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ድምፅ"</string>
     <string name="default_notification_description" msgid="78174796906240970">"ነባሪ ድምጽ (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"የስልክ ጥሪ ድምፅ"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"በሚደወልበት ጊዜ ንዘር"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"የመደወያ ሰሌዳ ድምፆች ዳስ"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"የመደወያ ሰሌዳ ራስ-ሙላ"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"የስልክ ሰሌዳ ራስ-አጠናቅቅ"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"የደወል ቅላጼ እና ንዘረት"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"የስብሰባስልክ ጥሪ አደራጅ"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"የአደጋ ጊዜ ቁጥር"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
