--- a/InCallUI/res/values-fa/strings.xml
+++ b/InCallUI/res/values-fa/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"در انتظار"</string>
     <string name="unknown" msgid="6878797917991465859">"ناشناس"</string>
     <string name="private_num" msgid="6713286113000232309">"شماره خصوصی"</string>
-    <string name="payphone" msgid="1931775086311769314">"تلفن سکه ای"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"خط مشغول است"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"شبکه مشغول است"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"پاسخی دریافت نشد، زمان پایان یافت"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"سرور غیرقابل دسترسی"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"شماره غیرقابل دسترسی"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"نام کاربر و رمز ورود اشتباه است"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"از خارج از شبکه تماس گرفته شده است"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"خطای سرور: بعداً دوباره امتحان کنید."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"بدون سیگنال"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"‏بیش از حد مجاز ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"رادیو خاموش"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"فاقد سیم، یا خطای سیم"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"شبکه تلفن همراه در دسترس نیست"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"‏تماس‌های خروجی توسط FDN محدود شده‌اند."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"هنگام روشن بودن محدودیت تماس، برقراری تماس‌های خروجی امکان‌پذیر نیست."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"همه تماس‌ها توسط کنترل دسترسی محدود شده‌اند."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"تماس‌های اضطراری توسط کنترل دسترسی محدود شده‌اند."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"تماس‌های معمولی توسط کنترل دسترسی محدود شده‌اند."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"شماره نامعتبر"</string>
+    <string name="payphone" msgid="4793877574636445118">"تلفن عمومی"</string>
     <string name="confCall" msgid="1904840547188336828">"تماس کنفرانسی"</string>
-    <string name="call_lost" msgid="317670617901479594">"تماس قطع شد."</string>
-    <string name="ok" msgid="3811371167865772377">"تأیید"</string>
+    <string name="call_lost" msgid="6183862117003999578">"تماس قطع شد"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"بلندگو"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"گوشی"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"هدست سیمی"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"تماس کنفرانسی <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"شماره پست صوتی"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"شماره گیری"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"در حال امتحان مجدد"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"در حال شماره‌گیری مجدد"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"تماس کنفرانسی"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"تماس ورودی"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"تماس پایان یافت"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"قطع تماس"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"در تماس"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"شماره من <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> است"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"در حال برقراری تماس ویدیویی"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"تماس ویدیویی"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"درحال درخواست تماس ویدیویی"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"اتصال تماس ویدیویی ممکن نیست"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"شماره پاسخ تماس شما\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"شماره پاسخ تماس اضطراری شما\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"شماره‌گیری"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"تماس بی پاسخ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"تماس‌های بی پاسخ"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"تماس جاری"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"در انتظار"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"تماس ورودی"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"تماس ویدیویی ورودی"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"درخواست تماس ویدیویی ورودی"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"پست صوتی جدید"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"پست صوتی جدید (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"شماره گیری <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"شماره پست صوتی ناشناس"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"بدون سرویس"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"شبکه انتخابی (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) قابل دسترس نیست"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"پاسخ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"قطع تماس"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"ویدیو"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"صدا"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"پذیرش"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"ردکردن"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"پاسخ تماس"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"پیام"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"برای برقراری یک تماس، ابتدا حالت هواپیما را خاموش کنید."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"در شبکه ثبت نشده است."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"شبکهٔ تلفن همراه موجود نیست."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"تماس ارسال نشد، هیچ شماره معتبری وارد نشده است."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"تماس ارسال نشد."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"شبکه تلفن همراه در دسترس نیست."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"برای برقراری تماس، یک شماره معتبر وارد کنید."</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"نمی‌توانید تماس بگیرید."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"‏شروع ترتیب MMI..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"سرویس پشتیبانی نشده."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"تغییر وضعیت تماس‌ها امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"تفکیک تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"انتقال تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"تماس‌های کنفرانسی امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"رد کردن تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"آزاد کردن تماس(ها) امکان‌پذیر نیست."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"شماره پست صوتی نامشخص."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"تماس اینترنتی"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"سرویس پشتیبانی نمی‌شود."</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"نمی‌توانید بین تماس‌ها جابجا شوید."</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"نمی‌توانید تماس را جدا کنید."</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"نمی‌توانید انتقال دهید."</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"نمی‌توانید کنفرانس برگزار کنید."</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"نمی‌توانید تماس را رد کنید."</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"نمی‌توانید تماس(ها) را آزاد کنید."</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"‏تماس SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"تماس اضطراری"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"در حال روشن کردن رادیو..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"خارج از منطقه سرویس، در حال امتحان مجدد..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"تماس ارسال نشد. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> یک شماره اضطراری نیست!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"تماس ارسال نشد، لطفاً یک شماره اضطراری را شماره‌گیری کنید!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"سرویسی در دسترس نیست. دوباره امتحان کنید..."</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"نمی‌توانید تماس بگیرید. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> یک شماره اضطراری نیست."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"نمی توانید تماس بگیرید. یک شماره اضطراری را شماره‌گیری کنید."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"استفاده از صفحه‌کلید برای شماره گیری"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"در انتظار نگه‌داشتن تماس"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"ازسرگیری تماس"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"افزودن تماس"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"ادغام تماس‌ها"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"تعویض تماس‌ها"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"نگهداشت"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"پایان"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"دکمه‌های شماره گیری"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"ادغام تماس‌ها"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"تعویض"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"مدیریت تماس‌ها"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"مدیریت کنفرانس"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"مدیریت تماس کنفرانسی"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"صوتی"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"تماس ویدیویی"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"تغییر به تماس صوتی"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"تغییر دوربین"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"توقف موقت ویدیو"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"گزینه‌های بیشتر"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"سرویس"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"تنظیم"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"‏&lt;تنظیم نشده&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"نوشتن پاسخ خود…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"لغو"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"ارسال"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"یک"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"دو"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"سه"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"چهار"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"پنج"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"شش"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"هفت"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"هشت"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"نه"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ستاره"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"صفر"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"پوند"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"شماره گیری"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"Backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"تلفن آیفون‌دار فعال شد."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"تماس نادیده گرفته شد."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"پاسخ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"ارسال پیامک"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"عدم پذیرش"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"پاسخ به صورت تماس ویدیویی"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"پاسخ به صورت تماس صوتی"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"پذیرش درخواست ویدیو"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"رد کردن درخواست ویدیو"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"برای <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> به بالا بلغزانید."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"برای <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> به چپ بلغزانید."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"برای <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> به راست بلغزانید."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"برای <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> به پایین بلغزانید."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"لرزش"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"لرزش"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"صدا"</string>
     <string name="default_notification_description" msgid="78174796906240970">"صدای پیش‌فرض (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"آهنگ زنگ تلفن"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ارتعاش هنگام زنگ زدن"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"صداهای پد لمسی شماره‌گیری"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"تکمیل خودکار صفحه شماره‌گیری"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"تکمیل خودکار صفحه شماره‌گیری"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"آهنگ‌ زنگ و لرزش"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"مدیریت تماس کنفرانس"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"شماره اضطراری"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"۰"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"۱"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"۲"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"۳"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"۴"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"۵"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"۶"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"۷"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"۸"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"۹"</string>
 </resources>
