--- a/InCallUI/res/values-hr/strings.xml
+++ b/InCallUI/res/values-hr/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"Na čekanju"</string>
     <string name="unknown" msgid="6878797917991465859">"Nepoznato"</string>
     <string name="private_num" msgid="6713286113000232309">"Privatni broj"</string>
-    <string name="payphone" msgid="1931775086311769314">"Telefonska govornica"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linija je zauzeta"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Mreža je zauzeta"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Nema odgovora, privremeno zaustavljeno"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Poslužitelj nedostupan"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Broj je nedostupan"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Netočno korisničko ime ili zaporka"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Poziv izvan mreže"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Pogreška poslužitelja. Pokušajte ponovno kasnije."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Nema signala"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Prekoračeno je ACM ograničenje"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Radio je isključen"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Nema SIM-a ili SIM ima pogrešku"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobilna mreža nije dostupna"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Odlazne pozive ograničava FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ne možete uspostavljati odlazne pozive ako je uključena zabrana poziva."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Sve je pozive ograničila pristupna kontrola."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Hitne pozive ograničila je pristupna kontrola."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Uobičajene pozive ograničila je pristupna kontrola."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Nevažeći broj"</string>
+    <string name="payphone" msgid="4793877574636445118">"Javna telefonska govornica"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferencijski poziv"</string>
-    <string name="call_lost" msgid="317670617901479594">"Poziv je prekinut."</string>
-    <string name="ok" msgid="3811371167865772377">"U redu"</string>
+    <string name="call_lost" msgid="6183862117003999578">"Poziv je prekinut"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Zvučnik"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Slušalice"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Žičane slušalice"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferencijski poziv <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Broj govorne pošte"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Biranje broja"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Ponovni pokušaj"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"Ponovno biranje"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferencijski poziv"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Dolazni poziv"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Poziv je završio"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Prekidanje veze"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Poziv u tijeku"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Moj broj je <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Povezivanje videopoziva"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videopoziv"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Zahtijevanje videopiziva"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"Videopoziv nije uspostavljen"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"Vaš broj za povratni poziv\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"Vaš broj za povratni poziv za hitne službe\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Biranje broja"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Propušteni poziv"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Propušteni pozivi"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Poziv u tijeku"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Na čekanju"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Dolazni poziv"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Dolazni videopoziv"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Dolazni zahtjev za videopoziv"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Nova govorna pošta"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Nova govorna pošta (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Biraj <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Nepoznat je broj govorne pošte"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Nema usluge"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Odabrana mreža (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) je onemogućena"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Odgovori"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Prekini vezu"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Videozapis"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Glasovno"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Prihvaćam"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Odbaci"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Povratni poziv"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Poruka"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Da biste uspostavili poziv, prvo isključite način rada u zrakoplovu."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Nije registrirano na mreži."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mobilna mreža nije dostupna."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Poziv nije uspostavljen, nije unijet valjani broj."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Poziv nije poslan."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mobilna mreža nije dostupna."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"Unesite važeći broj da biste uspostavili poziv."</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"Pozivanje nije moguće."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Pokretanje MMI sekvence…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Nepodržana usluga."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Nije moguće prebaciti pozive."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Nije moguće odvojiti poziv."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Nije moguće prenijeti poziv."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Nije moguće uspostaviti konferencijske pozive."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Nije moguće odbiti poziv."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Nije moguće ostvariti pozi(e)."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Broj govorne pošte nije poznat."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetski poziv"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"Usluga nije podržana."</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"Prebacivanje poziva nije moguće."</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"Odvajanje poziva nije moguće."</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"Prijenos nije moguć."</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Konferencijski poziv nije moguć."</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"Odbijanje poziva nije moguće."</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"Prekidanje poziva nije moguće."</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP poziv"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Hitan poziv"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Uključivanje radija…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Izvan područja usluge, ponovni pokušaj..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Poziv nije upućen. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> nije broj za hitne pozive!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Poziv nije upućen. Birajte broj hitne službe!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"Nema usluge. Pokušavamo ponovo…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"Pozivanje nije moguće. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> nije broj hitne službe."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Pozivanje nije moguće. Nazovite broj hitne službe."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Birajte pomoću tipkovnice"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Stavi poziv na čekanje"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Nastavi poziv"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Dodaj poziv"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Spoji pozive"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Prebaci na drugi poziv"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Na čekanju"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Kraj"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Površina za biranje brojeva"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Spoji pozive"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Zamijeni"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Upravljaj pozivima"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Upravljanje konferencijom"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Upravljaj konferencijskim pozivom"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Zvuk"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videopoziv"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Prijeđi na glasovni poziv"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Prebaci se na drugi fotoaparat"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pauziraj video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Više opcija"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Usluga"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Postavljanje"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Nije postavljeno&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Napišite odgovor..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Odustani"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Pošalji"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"jedan"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"dva"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"tri"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"četiri"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"pet"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"šest"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"sedam"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"osam"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"devet"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"zvjezdica"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"nula"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"funta"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"biraj"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Zvučnik je omogućen."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Zvuk poziva isključen."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Odgovori"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Pošalji SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Odbij"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Prihvati kao videopoziv"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Prihvati kao audiopoziv"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Prihvati zahtjev za videozapis"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Odbij zahtjev za videozapis"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Kliznite prema gore za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Kliznite lijevo za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Kliznite desno za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Kliznite prema dolje za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibracija"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibracija"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Zvuk"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Zadani zvuk (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Melodija zvona telefona"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibrira dok zvoni"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Tonovi biranja"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Samodovršavanje biranja brojeva"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"Samodovr. povr. za biranje br."</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Melodija zvona i vibracija"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Upravljanje konferencijskim pozivom"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Broj hitne službe"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
