--- a/InCallUI/res/values-mr-rIN/strings.xml
+++ b/InCallUI/res/values-mr-rIN/strings.xml
@@ -21,33 +21,13 @@
     <string name="onHold" msgid="9035493194749959955">"होल्ड वर"</string>
     <string name="unknown" msgid="6878797917991465859">"अज्ञात"</string>
     <string name="private_num" msgid="6713286113000232309">"खाजगी नंबर"</string>
-    <string name="payphone" msgid="1931775086311769314">"देय फोन"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"लाइन व्यस्त"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"नेटवर्क व्यस्त"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"कोणताही प्रतिसाद नाही, कालबाह्य झाले"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"सर्व्हर पोहचण्‍यायोग्‍य नाही"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"नंबर पोहचण्‍यायोग्‍य नाही"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"चुकीचे वापरकर्तानाव किंवा संकेतशब्द"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"नेटवर्क-बाहेरून कॉल केला"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"सर्व्हर त्रुटी. कृपया नंतर पुन्हा प्रयत्न करा."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"सिग्नल नाही"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM मर्यादा ओलांडली"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"रेडिओ बंद"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM नाही किंवा SIM त्रुटी"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"मोबाइल नेटवर्क उपलब्ध नाही"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"केले जाणारे कॉल FDN द्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"कॉल वगळणे चालू असताना आपण कॉल करू शकत नाही."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"सर्व कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"आणीबाणीचे कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"सामान्‍य कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"अवैध नंबर"</string>
+    <string name="payphone" msgid="4793877574636445118">"सार्वजनिक फोन"</string>
     <string name="confCall" msgid="1904840547188336828">"परिषद कॉल"</string>
-    <string name="call_lost" msgid="317670617901479594">"कॉल गमावला गेला आहे."</string>
-    <string name="ok" msgid="3811371167865772377">"ठीक"</string>
+    <string name="call_lost" msgid="6183862117003999578">"कॉल सोडला"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"स्पीकर"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"हँडसेट इअरपीस"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"वायर्ड हेडसेट"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"ब"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"खालील टोन पाठवायचे?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"टोन पाठवित आहे\n"</string>
     <string name="send_button" msgid="4106860097497818751">"पाठवा"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"परिषद कॉल <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"व्हॉइसमेल नंबर"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"डायल करीत आहे"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"पुन्हा प्रयत्न करत आहे"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"रीडायल करत आहे"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"परिषद कॉल"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"येणारे कॉल"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"कॉल संपला"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"हँग अप करणेे"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"कॉल मधील"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"माझा नंबर <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g> आहे"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"व्हिडिओ कनेक्ट करत आहे"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"व्हिडिओ कॉल"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"व्हिडिओ विनंती करत आहे"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"व्हिडिओ कॉल कनेक्ट करू शकत नाही"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"आपला कॉलबॅक नंबर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"आपला आणीबाणी कॉलबॅक नंबर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"डायल करीत आहे"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"सुटलेला कॉल"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"सुटलेले कॉल"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"सुरू असलेला कॉल"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"होल्ड वर"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"येणारा कॉल"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"येणारा व्हिडिओ कॉल"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"येणारी व्हिडिओ विनंती"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"नवीन व्हॉइसमेल"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"नवीन व्हॉइसमेल (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"<xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g> डायल करा"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"व्हॉइसमेल नंबर अज्ञात"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"सेवा नाही"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"निवडलेले नेटवर्क (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) अनुपलब्‍ध"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"उत्तर"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"हँग अप"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"व्हिडिओ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"व्हॉइस"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"स्वीकारा"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"डिसमिस करा"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"पुन्हा कॉल करा"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"संदेश"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"कॉल करण्यासाठी, प्रथम विमान मोड बंद करा."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"नेटवर्कवर नोंदणीकृत नाही."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"मोबाइल नेटवर्क उपलब्ध नाही."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"कॉल पाठविला नाही, वैध नंबर प्रविेष्‍ट केला नाही."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"कॉल पाठविला नाही."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"सेल्युलर नेटवर्क उपलब्ध नाही."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"कॉल करण्यासाठी, एक वैध नंबर प्रविष्ट करा."</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"कॉल करू शकत नाही."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI क्रम प्रारंभ करीत आहे..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"असमर्थित सेवा."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"कॉल स्विच करण्यात अक्षम."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"कॉल वेगळे करण्‍यात अक्षम."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"कॉल स्‍थानांतरित करण्यात अक्षम."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"परिषद कॉल करण्‍यात अक्षम."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"कॉलला नकार देण्‍यात अक्षम."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"कॉल रीलिज करण्‍यात अक्षम."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"व्हॉइसमेल क्रमांक अज्ञात."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"इंटरनेट कॉल"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"सेवा समर्थित नाही."</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"कॉल स्विच करू शकत नाही."</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"कॉल विभक्त करू शकत नाही."</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"हस्तांतर करू शकत नाही."</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"कॉन्फरन्स घेऊ शकत नाही."</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"कॉल नाकारू शकत नाही."</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"कॉल रिलीझ करू शकत नाही."</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP कॉल"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"आणीबाणीचा कॉल"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"रेडिओ चालू करीत आहे..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"सेवा क्षेत्राच्या बाहेर, पुन्हा प्रयत्न करत आहे..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"कॉल पाठविला नाही. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> हा आणीबाणीचा नंबर नाही!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"कॉल पाठविला नाही. आणीबाणीचा नंबर डायल करा!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"सेवा नाही. पुन्हा प्रयत्न करत आहे…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"कॉल करू शकत नाही. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> हा आणीबाणी नंबर नाहीये."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"कॉल करू शकत नाही. आणीबाणी नंबर डायल करा."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"डायल करण्‍यासाठी कीबोर्डचा वापर करा"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"कॉल होल्‍ड करा"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"कॉल सुरु करा"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"कॉल जोडा"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"कॉल विलीन करा"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"कॉल स्‍वॅप करा"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"होल्ड करा"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"शेवट"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"डायलपॅड"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"कॉल विलीन करा"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"अदलाबदल करा"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"कॉल व्यवस्थापित करा"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"परिषद व्यवस्थापित करा"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"परिषद कॉल व्यवस्थापित करा"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"ऑडिओ"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"व्हिडिओ कॉल"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"व्हॉइस कॉल वर बदला"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"कॅमेरा स्विच करा"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"व्हिडिओला विराम द्या"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"अधिक पर्याय"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"सेवा"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"सेटअप"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;सेट नाही&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"आपण स्वतः लिहा…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"रद्द करा"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"पाठवा"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"एक"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"दोन"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"तीन"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"चार"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"पाच"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"सहा"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"सात"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"आठ"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"नऊ"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"तारा"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"शून्य"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"पाऊंड"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"डायल करा"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"स्‍पीकरफोन सक्षम केला."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"कॉल नि.शब्‍द केला."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"उत्तर"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS पाठवा"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"नकार द्या"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"व्हिडिओ कॉल म्हणून उत्तर द्या"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"ऑडिओ कॉल म्हणून उत्तर द्या"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"व्हिडिओ विनंती स्वीकारा"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"व्हिडिओ विनंतीस नकार द्या"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> साठी वर स्लाइड करा."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> साठी डावीकडे स्लाइड करा."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> साठी उजवीकडे स्लाइड करा."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> साठी खाली स्लाइड करा."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"कंपन होणे"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"कंपन होणे"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"ध्वनी"</string>
     <string name="default_notification_description" msgid="78174796906240970">"डीफॉल्ट आवाज (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"फोन रिंगटोन"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"रिंग करताना कंपन करा"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"डायल पॅड स्पर्श टोन"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"डायल पॅड स्‍वयंपूर्ण"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"डायलपॅड स्वयंपूर्ण"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"रिंगटोन आणि कंपन"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"परिषद कॉल व्यवस्थापित करा"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"आणीबाणीचा नंबर"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
