--- a/InCallUI/res/values-sk/strings.xml
+++ b/InCallUI/res/values-sk/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"Podržaný hovor"</string>
     <string name="unknown" msgid="6878797917991465859">"Neznáme"</string>
     <string name="private_num" msgid="6713286113000232309">"Súkromné číslo"</string>
-    <string name="payphone" msgid="1931775086311769314">"Verejný telefón"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linka je obsadená"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Sieť je zaneprázdnená"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Bez odozvy, vypršal časový limit"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Server je nedostupný"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Volané číslo je nedostupné"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Nesprávne používateľské meno alebo heslo"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Volanie z priestoru mimo siete"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Chyba servera: Skúste to znova neskôr."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Žiadny signál"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Bol prekročený limit ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Rádio je vypnuté"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Karta SIM chýba alebo nefunguje"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobilná sieť nie je k dispozícii"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Odchádzajúce hovory sú obmedzené na pevne určené čísla (FDN)."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ak je zapnuté blokovanie hovorov, nie je možné uskutočňovať odchádzajúce hovory."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Všetky hovory sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Tiesňové volania sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Bežné volania sú obmedzené ovládaním prístupu."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Neplatné číslo"</string>
+    <string name="payphone" msgid="4793877574636445118">"Telefónny automat"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferenčný hovor"</string>
-    <string name="call_lost" msgid="317670617901479594">"Hovor bol prerušený."</string>
-    <string name="ok" msgid="3811371167865772377">"OK"</string>
+    <string name="call_lost" msgid="6183862117003999578">"Hovor bol prerušený."</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Reproduktor"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Slúchadlo"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Náhlavná súprava s káblom"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferenčný hovor <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Číslo hlasovej schránky"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Vytáčanie"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Opakuje sa pokus"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"Znova sa vytáča"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferenčný hovor"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Prichádzajúci hovor"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Hovor bol ukončený"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Ukončovanie hovoru"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Prebieha hovor"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Moje číslo je <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Pripája sa video"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videohovor"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Žiada sa video"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"Videohovor nie je možné pripojiť"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"Vaše číslo na spätné volanie\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"Vaše číslo na spätné tiesňové volanie\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Vytáčanie"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Zmeškaný hovor"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Zmeškané hovory"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Prebiehajúci hovor"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Podržaný hovor"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Prichádzajúci hovor"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Prichádzajúci videohovor"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Prichádzajúca žiadosť o video"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Nová hlasová správa"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Nová hlasová správa (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Zavolať hlasovú schránku <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Číslo hlasovej schránky je neznáme"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Žiadny signál"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Vybratá sieť (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) nie je k dispozícii"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Odpoveď"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Položiť"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Video"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Hlas"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Prijať"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Zatvoriť"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Zavolať späť"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Správa"</string>
-    <string name="incall_error_power_off" msgid="6550191216405193368">"Ak chcete telefonovať, vypnite najprv režim V lietadle."</string>
+    <string name="incall_error_power_off" msgid="6550191216405193368">"Ak chcete telefonovať, vypnite najprv režim v lietadle."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Prihlásenie do siete nebolo úspešné."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mobilná sieť nie je k dispozícii."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Hovor sa nepodarilo spojiť, nebolo zadané platné číslo."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Hovor nebol spojený."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mobilná sieť nie je k dispozícii."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"Ak chcete volať, zadajte platné číslo"</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"Hovor nie je možné uskutočniť"</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Prebieha spúšťanie sekvencie MMI..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Nepodporovaná služba."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Hovory nie je možné prepnúť."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Hovor nie je možné oddeliť."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Hovor nie je možné preniesť."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Hovory nie je možné spojiť do konferenčného hovoru."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Hovor nie je možné odmietnuť."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Hovor nie je možné uvoľniť."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Číslo hlasovej schránky je neznáme"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetový hovor"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"Služba nie je podporovaná"</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"Nedajú sa prepínať hovory"</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"Nedá sa rozdeliť hovor"</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"Nedá sa preniesť"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Nedá sa uskutočniť konferenčný hovor"</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"Nedá sa odmietnuť hovor"</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"Nedajú sa ukončiť hovory"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Hovory SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Tiesňové volanie"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Prebieha zapínanie rádia..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Nepokrytá oblasť, opakovanie pokusu..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Hovor sa nepodarilo spojiť. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> nie je číslo núdzového volania."</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Hovor nebol spojený, vytočte číslo tiesňového volania."</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"Žiadna služba. Prebieha opätovný pokus…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"Hovor nie je možné uskutočniť. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> nie je číslo tiesňového volania."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Hovor nie je možné uskutočniť. Vytočte číslo tiesňového volania."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Číslo vytočíte pomocou klávesnice."</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Podržať hovor"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Obnoviť hovor"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Pridať hovor"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Zlúčiť hovory"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Zameniť hovory"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Podržať"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Koniec"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Číselná klávesnica"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Zlúčiť hovory"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Zameniť"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Spravovať hovory"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Správa konferencie"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Spravovať kon. hovor"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Zvuk"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videohovor"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Zmeniť na hlasový hovor"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Prepnúť kameru"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Pozastaviť video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Ďalšie možnosti"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Služba"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Nastavenie"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Nenastavené&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Napísať vlastnú..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Zrušiť"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Odoslať"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"jeden"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"dva"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"tri"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"štyri"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"päť"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"šesť"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"sedem"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"osem"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"deväť"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"hviezdička"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"nula"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"libra"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"vytáčanie"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Reproduktor je povolený."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Zvuk hovoru bol vypnutý."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Odpovedať"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Odoslať SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Odmietnuť"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Prijať ako videohovor"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Prijať ako zvukový hovor"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Prijať žiadosť o videohovor"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Odmietnuť žiadosť o videohovor"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Prejdite prstom nahor: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Prejdite prstom doľava: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Prejdite prstom doprava: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Prejdite prstom nadol: <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibrovať"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibrovať"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Zvuk"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Predvolený zvuk (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Tón zvonenia telefónu"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibrovať pri zvonení"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Zvuky pri dotyku číselníku"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Automatické dokonč. číselnej klávesnice"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"Čís. klávesnica – aut. dopĺň."</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Tón zvonenia a vibrovanie"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Spravovať konferenčný hovor"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Číslo tiesňového volania"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
