--- a/InCallUI/res/values-sl/strings.xml
+++ b/InCallUI/res/values-sl/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"Zadržano"</string>
     <string name="unknown" msgid="6878797917991465859">"Neznano"</string>
     <string name="private_num" msgid="6713286113000232309">"Zasebna številka"</string>
-    <string name="payphone" msgid="1931775086311769314">"Telefonska govorilnica"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linija je zasedena"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Omrežje je zasedeno"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ni odziva, časovna omejitev je potekla"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Strežnik ni dosegljiv"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Številka ni dosegljiva"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Napačno uporabniško ime ali geslo"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Klic iz nepooblaščenega omrežja"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Napaka strežnika: poskusite znova pozneje."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ni signala"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"Presežena omejitev ACM"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Radio je izklopljen"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ni kartice SIM ali napaka kartice SIM"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobilno omrežje ni na voljo"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Odhodni klici so omejeni s FDN."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ko je vklopljena zapora klicev, ne morete klicati."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Vsi klici so omejeni z nadzorom dostopa."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Klici v sili so omejeni z nadzorom dostopa."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Navadni klici so omejeni z nadzorom dostopa."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Neveljavna številka"</string>
+    <string name="payphone" msgid="4793877574636445118">"Telefonska govorilnica"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferenčni klic"</string>
-    <string name="call_lost" msgid="317670617901479594">"Klic je bil izgubljen."</string>
-    <string name="ok" msgid="3811371167865772377">"V redu"</string>
+    <string name="call_lost" msgid="6183862117003999578">"Klic je bil prekinjen"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Zvočnik"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Slušalka"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Žične slušalke"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferenčni klic <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Številka glasovne pošte"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Klicanje"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Ponovni poskus"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"Vnovično klicanje"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferenčni klic"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Dohodni klic"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Klic je bil končan"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Prekinitev"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Dohodni klic"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Moja številka je <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Povezovanje videa"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Videoklic"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Zahtevanje videa"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"Videoklica ni mogoče vzpostaviti"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"Vaša številka za povratni klic:\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"Vaša številka za povratni klic v sili:\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Klicanje"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Neodgovorjeni klic"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Neodgovorjeni klici"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Aktivni klic"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Zadržano"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Dohodni klic"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Dohodni videoklic"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Dohodna zahteva za video"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Nova glasovna pošta"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Nova glasovna pošta (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Kliči <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Neznana številka glasovne pošte"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ni storitve"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Izbrano omrežje (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ni na voljo"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Sprejmi"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Prekinite klic"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Videoklic"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Govor"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Sprejmi"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Opusti"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Povratni klic"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Sporočilo"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Če želite poklicati, najprej izklopite način za letalo."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ni registrirano v omrežju."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Omrežje prenosnega telefona ni na voljo."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Klic ni bil poslan, veljavna številka ni vnesena."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Klic ni bil poslan."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mobilno omrežje ni na voljo."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"Če želite opraviti klic, vnesite veljavno številko."</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"Klicanje ni mogoče."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Začetek zaporedja MMI ..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Nepodprta storitev."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Preklop klicev ni mogoč."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Klica ni mogoče ločiti."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Klica ni mogoče prenesti."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Konferenčni klici onemogočeni."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Klica ni mogoče zavrniti."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Klicev ni mogoče sprostiti."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Neznana številka odzivnika."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"Internetni klic"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"Storitev ni podprta."</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"Preklop med klici ni mogoč."</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"Ločitev klica ni mogoča."</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"Prenos ni mogoč."</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Konferenčni klic ni mogoč."</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"Zavrnitev klica ni mogoča."</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"Prevzem klicev ni mogoč."</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Klic SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Klic v sili"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Vklop radia …"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Zunaj območja storitve, ponovni poskus ..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Klic ni bil poslan. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ni številka za nujne primere!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Klic ni bil poslan. Pokličite številko za nujne primere!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"Ni signala. Vnovičen poskus …"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"Klicanje ni mogoče. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ni številka za klic v sili."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Klicanje ni mogoče. Opravite klic v sili."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Za klicanje uporabite tipkovnico"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Zadrži klic"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Nadaljuj klic"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Dodaj klic"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Združi klice"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Zamenjaj klice"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Zadrži"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Konec"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Številčnica"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Združi klice"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Zamenjaj"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Upravljanje klicev"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Upravljanje konference"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Upravljanje konferenčnih klicev"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Zvok"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Videoklic"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Preklopi na glasovni klic"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Preklop fotoaparata"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Začasno ustavi video"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Več možnosti"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Storitev"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Nastavitev"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Ni nastavljeno&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Napišite svoje besedilo …"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Prekliči"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Pošlji"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"ena"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"dve"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"tri"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"štiri"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"pet"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"šest"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"sedem"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"osem"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"devet"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"zvezda"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"nič"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"funt"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"klicanje"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"vračalka"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Zvočnik omogočen."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Klic izključen."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Odgovori"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Pošlji SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Zavrni"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Odgovori z videoklicem"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Odgovori z zvočnim klicem"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Sprejmi zahtevo za video"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Zavrni zahtevo za video"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"Povlecite navzgor za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"Povlecite v levo za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"Povlecite v desno za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"Povlecite navzdol za <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Vibriraj"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Vibriraj"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Zvok"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Privzeti zvok (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Ton zvonjenja telefona"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibriranje ob zvonjenju"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Zvok številčnice"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Samodokončanje za tipkovnico"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"Samodokončanje tipkovnice"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Zvonjenje in vibriranje"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Upravljanje konferenčnih klicev"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Številka za klic v sili"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
