--- a/InCallUI/res/values-th/strings.xml
+++ b/InCallUI/res/values-th/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"พักสาย"</string>
     <string name="unknown" msgid="6878797917991465859">"ไม่ทราบ"</string>
     <string name="private_num" msgid="6713286113000232309">"หมายเลขส่วนตัว"</string>
-    <string name="payphone" msgid="1931775086311769314">"โทรศัพท์สาธารณะ"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"สายไม่ว่าง"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"เครือข่ายไม่ว่าง"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ไม่มีการตอบกลับ หมดเวลา"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"ไม่สามารถเข้าถึงเซิร์ฟเวอร์ได้"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"ไม่สามารถติดต่อเลขหมายนี้ได้"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"โทรจากนอกเครือข่าย"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"ข้อผิดพลาดของเซิร์ฟเวอร์ โปรดลองอีกครั้งในภายหลัง"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"ไม่มีสัญญาณ"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"เกินจำนวนสูงสุดของ ACM แล้ว"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ปิดวิทยุ"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"ไม่มีซิมหรือเกิดข้อผิดพลาดกับซิม"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"เครือข่ายมือถือใช้งานไม่ได้"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"การโทรออกถูกจำกัดโดย FDN"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"โทรออกไม่ได้เมื่อระงับการโทรไว้"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"การโทรทั้งหมดถูกจำกัดโดยการควบคุมการเข้าถึง"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"การโทรฉุกเฉินถูกจำกัดโดยการควบคุมการเข้าถึง"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"การโทรปกติถูกจำกัดโดยการควบคุมการเข้าถึง"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"หมายเลขไม่ถูกต้อง"</string>
+    <string name="payphone" msgid="4793877574636445118">"โทรศัพท์สาธารณะ"</string>
     <string name="confCall" msgid="1904840547188336828">"การประชุมสาย"</string>
-    <string name="call_lost" msgid="317670617901479594">"สายหลุดไป"</string>
-    <string name="ok" msgid="3811371167865772377">"ตกลง"</string>
+    <string name="call_lost" msgid="6183862117003999578">"สายหลุด"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"ลำโพง"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ชุดหูฟังโทรศัพท์"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"ชุดหูฟังแบบมีสาย"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"การประชุมสาย <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"หมายเลขข้อความเสียง"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"กำลังโทรออก"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"กำลังทดลองซ้ำ"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"โทรใหม่"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"การประชุมสาย"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"สายเข้า"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"วางสายแล้ว"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"กำลังวางสาย"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"กำลังใช้สาย"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"หมายเลขของฉันคือ <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"กำลังเชื่อมต่อวิดีโอ"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"แฮงเอาท์วิดีโอ"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"กำลังขอวิดีโอ"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"ไม่สามารถเชื่อมต่อแฮงเอาท์วิดีโอได้"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"หมายเลขโทรกลับของคุณ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"หมายเลขโทรกลับฉุกเฉินของคุณ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"กำลังโทรออก"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"สายที่ไม่ได้รับ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"สายที่ไม่ได้รับ"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"โทรต่อเนื่อง"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"พักสาย"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"สายเรียกเข้า"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"แฮงเอาท์วิดีโอเรียกเข้า"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"คำขอโทรเข้าเป็นวิดีโอ"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"ข้อความเสียงใหม่"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"ข้อความเสียงใหม่ (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"หมุนหมายเลข <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"ไม่ทราบหมายเลขข้อความเสียง"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"ไม่มีบริการ"</string>
-    <string name="notification_network_selection_text" msgid="2607085729661923269">"เครือข่ายที่เลือกไว้ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ใช้งานไม่ได้"</string>
+    <string name="notification_network_selection_text" msgid="2607085729661923269">"เครือข่ายที่เลือกไว้ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ไม่พร้อมใช้งาน"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"ตอบ"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"วางสาย"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"วิดีโอ"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"เสียง"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"ยอมรับ"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"ปิด"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"โทรกลับ"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"ข้อความ"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"หากต้องการโทรออก ให้ปิดโหมดใช้งานบนเครื่องบินก่อน"</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"ยังไม่ได้ลงทะเบียนบนเครือข่าย"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"เครือข่ายมือถือใช้งานไม่ได้"</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"ไม่ได้โทรออก ไม่ได้ป้อนหมายเลขที่ถูกต้อง"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"ไม่ได้โทรออก"</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"เครือข่ายมือถือใช้งานไม่ได้"</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"หากต้องการโทรออก โปรดป้อนหมายเลขที่ถูกต้อง"</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"ไม่สามารถโทรได้"</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"กำลังเริ่มต้นลำดับ MMI..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"บริการไม่ได้รับการสนับสนุน"</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"สลับสายไม่ได้"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"แยกสายไม่ได้"</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"โอนสายไม่ได้"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ประชุมทางโทรศัพท์ไม่ได้"</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ปฏิเสธสายไม่ได้"</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ปล่อยสายไม่ได้"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"ไม่ทราบหมายเลขข้อความเสียง"</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"การโทรทางอินเทอร์เน็ต"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"ไม่สนับสนุนบริการนี้"</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"ไม่สามารถสลับสายได้"</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"ไม่สามารถแยกสายได้"</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"ไม่สามารถโอนได้"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"ไม่สามารถประชุมได้"</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"ไม่สามารถปฏิเสธสายได้"</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"ไม่สามารถเริ่มการโทรได้"</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"โทรแบบ SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"หมายเลขฉุกเฉิน"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"กำลังเปิดวิทยุ…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"นอกพื้นที่ให้บริการ กำลังลองซ้ำ..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"ไม่ได้โทรออก <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ไม่ใช่หมายเลขฉุกเฉิน!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"ไม่ได้โทรออก หมุนหมายเลขฉุกเฉิน!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"ไม่มีบริการ โปรดลองอีกครั้ง…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"ไม่สามารถโทรได้ <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ไม่ใช่หมายเลขฉุกเฉิน"</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"ไม่สามารถโทรออก โทรหมายเลขฉุกเฉิน"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ใช้แป้นพิมพ์กดหมายเลขโทรศัพท์"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"พักสาย"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"โทรต่อ"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"เพิ่มการโทร"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"รวมสาย"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"สลับสาย"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"พักสาย"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"สิ้นสุด"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"แป้นหมายเลข"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"รวมสาย"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"สลับ"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"จัดการการโทร"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"จัดการการประชุม"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"จัดการการประชุมสาย"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"เสียง"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"แฮงเอาท์วิดีโอ"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"เปลี่ยนเป็นการโทรด้วยเสียง"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"สลับกล้องถ่ายรูป"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"หยุดวิดีโอชั่วคราว"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"ตัวเลือกอื่น"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"บริการ"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"การตั้งค่า"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;ไม่ได้ตั้งค่า&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"เขียนคำตอบของคุณเอง..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"ยกเลิก"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"ส่ง"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"หนึ่ง"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"สอง"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"สาม"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"สี่"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"ห้า"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"หก"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"เจ็ด"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"แปด"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"เก้า"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ดาว"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"ศูนย์"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"ปอนด์"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"หมุนหมายเลข"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"ถอยหลัง"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"เปิดใช้งานลำโพงแล้ว"</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"ปิดเสียงการโทร"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"คำตอบ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"ส่ง SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"ปฏิเสธ"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"รับสายเป็นแฮงเอาท์วิดีโอ"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"รับสายเป็นการโทรด้วยเสียง"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"ยอมรับคำขอวิดีโอ"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"ปฏิเสธคำขอวิดีโอ"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"เลื่อนขึ้นเพื่อ <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>"</string>
     <string name="description_direction_left" msgid="7129873384376533287">"เลื่อนไปทางซ้ายเพื่อ <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>"</string>
     <string name="description_direction_right" msgid="2122584234531957308">"เลื่อนไปทางขวาเพื่อ <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>"</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"เลื่อนลงเพื่อ <xliff:g id="TARGET_DESCRIPTION">%s</xliff:g>"</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"สั่น"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"สั่น"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"เสียง"</string>
     <string name="default_notification_description" msgid="78174796906240970">"เสียงเริ่มต้น (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"เสียงเรียกเข้าโทรศัพท์"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"สั่นเมื่อมีสายเข้า"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"เสียงแตะแป้นหมายเลข"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"ช่วยเติมอัตโนมัติในแป้นหมายเลข"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"เติมหมายเลขอัตโนมัติบนแป้น"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"เสียงเรียกเข้าและสั่น"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"จัดการการประชุมสาย"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"หมายเลขฉุกเฉิน"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
