--- a/InCallUI/res/values-tr/strings.xml
+++ b/InCallUI/res/values-tr/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"Beklemede"</string>
     <string name="unknown" msgid="6878797917991465859">"Bilinmiyor"</string>
     <string name="private_num" msgid="6713286113000232309">"Özel numara"</string>
-    <string name="payphone" msgid="1931775086311769314">"Ankesörlü telefon"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Hat meşgul"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Ağ meşgul"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Yanıt yok, zaman aşımı oluştu"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Sunucuya ulaşılamıyor"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Numaraya ulaşılamıyor"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Hatalı kullanıcı adı veya şifre"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Çağrı, ağın dışından yapıldı"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Sunucu hatası. Daha sonra tekrar deneyin."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Sinyal yok"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM sınırı aşıldı"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Radyo kapalı"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM kart yok veya SIM hatası"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Mobil ağ kullanılamıyor"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Giden çağrılar SAN tarafından kısıtlandı."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Çağrı engelleme açıkken arama yapamazsınız"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Tüm çağrılar erişim denetimi tarafından kısıtlandı."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Acil durum çağrıları erişim denetimi tarafından kısıtlandı."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Normal çağrılar erişim denetimi tarafından kısıtlanmış."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Geçersiz numara"</string>
+    <string name="payphone" msgid="4793877574636445118">"Ankesörlü telefon"</string>
     <string name="confCall" msgid="1904840547188336828">"Konferans görüşmesi"</string>
-    <string name="call_lost" msgid="317670617901479594">"Çağrı istemeden sonlandırıldı."</string>
-    <string name="ok" msgid="3811371167865772377">"Tamam"</string>
+    <string name="call_lost" msgid="6183862117003999578">"Çağrı kesildi"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Hoparlör"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Mobil cihaz kulaklığı"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Kablolu kulaklık"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferans görüşmesi <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Sesli mesaj numarası"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Çevriliyor"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Tekrar deniyor"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"Yeniden aranıyor"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferans görüşmesi"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Gelen çağrı"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Çağrı sonlandırıldı"</string>
@@ -65,6 +45,12 @@
     <string name="card_title_hanging_up" msgid="3999101620995182450">"Sonlandırılıyor"</string>
     <string name="card_title_in_call" msgid="6346543933068225205">"Çağrı halinde"</string>
     <string name="card_title_my_phone_number" msgid="112428362494434191">"Numaram: <xliff:g id="MY_PHONE_NUMBER">%s</xliff:g>"</string>
+    <string name="card_title_video_call_connecting" msgid="297586766381973954">"Video bağlanıyor"</string>
+    <string name="card_title_video_call" msgid="5898636679563320218">"Video görüşmesi"</string>
+    <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Video isteniyor"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"Video görüşmesi bağlantısı yapılamıyor"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"Geri arama numaranız\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"Acil durum geri arama numaranız\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"Çevriliyor"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Cevapsız çağrı"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Cevapsız çağrılar"</string>
@@ -73,36 +59,47 @@
     <string name="notification_ongoing_call" msgid="7068688957273482989">"Devam eden çağrılar"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"Beklemede"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"Gelen çağrı"</string>
+    <string name="notification_incoming_video_call" msgid="7356836933934464805">"Gelen video görüşmesi isteği"</string>
+    <string name="notification_requesting_video_call" msgid="1405576812892369451">"Gelen video isteği"</string>
     <string name="notification_voicemail_title" msgid="8933468752045550523">"Yeni sesli mesaj"</string>
     <string name="notification_voicemail_title_count" msgid="4366360747660929916">"Yeni sesli mesaj (<xliff:g id="COUNT">%d</xliff:g>)"</string>
     <string name="notification_voicemail_text_format" msgid="4447323569453981685">"Çevir: <xliff:g id="VOICEMAIL_NUMBER">%s</xliff:g>"</string>
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Sesli mesaj numarası bilinmiyor"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Hizmet yok"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Seçili ağ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) kullanılamıyor"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Yanıtla"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Kapat"</string>
+    <string name="notification_action_answer_video" msgid="7809271910870211729">"Video"</string>
+    <string name="notification_action_answer_voice" msgid="1770796916369437773">"Ses"</string>
+    <string name="notification_action_accept" msgid="2898609801209468429">"Kabul et"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"Kapat"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"Geri ara"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Mesaj gönder"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Bir çağrı yapmak için öncelikle Uçak modunu kapatın."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ağda kayıtlı değil."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mobil ağ kullanılamıyor."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Çağrı gönderilmedi. Geçerli numara girilmedi."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Çağrı gönderilmedi."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Hücresel ağ kullanılamıyor."</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"Arama yapmak için geçerli bir numara girin."</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"Arama yapılamıyor."</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI dizisi başlatılıyor..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Desteklenmeyen hizmet."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Çağrılar arasında geçiş yapılamıyor."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Çağrı ayrılamıyor."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Çağrı aktarılamıyor."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Çağrılar konferans görüşmesi olarak birleştirilemiyor."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Çağrı reddedilemiyor."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Çağrılar serbest bırakılamıyor."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Sesli mesaj numarası bilinmiyor."</string>
-    <string name="incall_call_type_label_sip" msgid="2310958283037924371">"İnternet çağrısı"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"Servis desteklenmiyor."</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"Çağrı geçişi yapılamıyor."</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"Çağrı ayrılamıyor."</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"Aktarılamıyor."</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Konferans yapılamıyor."</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"Çağrı reddedilemiyor."</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"Çağrılar bırakılamıyor."</string>
+    <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP çağrısı"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Acil durum çağrısı"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Radyo açılıyor..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Hizmet alanı dışında, tekrar deneniyor..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Çağrı gönderilmedi, <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> bir acil durum numarası değil!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Çağrı gönderilmedi. Bir acil durum numarası çevirin!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"Servis yok. Tekrar deneniyor…"</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"Aranamıyor. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> bir acil durum numarası değil."</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Aranamıyor. Bir acil durum numarasını arayın."</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Çevirmek için klavyeyi kullan"</string>
+    <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Çağrıyı beklet"</string>
+    <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Çağrıya devam et"</string>
+    <string name="overflowAddMenuItemText" msgid="5605615101930811453">"Çağrı ekle"</string>
+    <string name="overflowMergeMenuItemText" msgid="6305762210377655389">"Çağrıları birleştir"</string>
+    <string name="overflowSwapMenuItemText" msgid="6603717809137071603">"Çağrılar arasında geçiş yap"</string>
     <string name="onscreenHoldText" msgid="2285258239691145872">"Beklet"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Sonlandır"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Tuş takımı"</string>
@@ -111,9 +108,13 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Çağrıları birleştir"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Değiştir"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Aramaları yönet"</string>
-    <string name="onscreenManageConferenceText" msgid="6485935856534311346">"Konferansı yönet"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Konferans çağrısını yönet"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Ses"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Video görüşmesi"</string>
+    <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Sesli çağrıya geç"</string>
+    <string name="onscreenSwitchCameraText" msgid="5324543493442787798">"Kamerayı değiştir"</string>
+    <string name="onscreenPauseVideoText" msgid="5663965924921429203">"Videoyu duraklat"</string>
+    <string name="onscreenOverflowText" msgid="2702376562345723132">"Diğer seçenekler"</string>
     <string name="voicemail_provider" msgid="5135942703327136909">"Hizmet"</string>
     <string name="voicemail_settings" msgid="72448049107749316">"Kurulum"</string>
     <string name="voicemail_number_not_set" msgid="6724904736891087856">"&lt;Ayarlanmadı&gt;"</string>
@@ -126,47 +127,25 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Kendi yanıtınızı oluşturun…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"İptal"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Gönder"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"bir"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"iki"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"üç"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"dört"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"beş"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"altı"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"yedi"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"sekiz"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"dokuz"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"yıldız"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"sıfır"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"kare"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"çevir"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"geri tuşu"</string>
-    <string name="accessibility_speakerphone_enabled" msgid="1988512040421036359">"Hoparlör etkin."</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Çağrı sesi kapatıldı."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Yanıtla"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS gönder"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Reddet"</string>
+    <string name="description_target_answer_video_call" msgid="3495965588512395026">"Video görüşmesi olarak yanıtla"</string>
+    <string name="description_target_answer_audio_call" msgid="8396296303320994450">"Sesli görüşme olarak yanıtla"</string>
+    <string name="description_target_accept_upgrade_to_video_request" msgid="2894072808324604062">"Video isteğini kabul et"</string>
+    <string name="description_target_decline_upgrade_to_video_request" msgid="4093888612888538776">"Video isteğini reddet"</string>
     <string name="description_direction_up" msgid="4441409581444516690">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> için yukarı kaydırın."</string>
     <string name="description_direction_left" msgid="7129873384376533287">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> için sola kaydırın."</string>
     <string name="description_direction_right" msgid="2122584234531957308">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> için sağa kaydırın."</string>
+    <string name="description_direction_down" msgid="4317245625565166742">"<xliff:g id="TARGET_DESCRIPTION">%s</xliff:g> için aşağı kaydırın."</string>
     <string name="voicemail_notification_vibrate_when_title" msgid="8361970092063604886">"Titreşim"</string>
     <string name="voicemail_notification_vibarte_when_dialog_title" msgid="5739583146522136440">"Titreşim"</string>
     <string name="voicemail_notification_ringtone_title" msgid="2609519527849101590">"Ses"</string>
     <string name="default_notification_description" msgid="78174796906240970">"Varsayılan ses (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Telefon zil sesi"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Çalarken titret"</string>
-    <string name="dtmf_tone_enable_title" msgid="827601042915852989">"Tuşlara basınca ses çıksın"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Tuş takımı otomatik tamamlama"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"Tuş takımı otomatik tamamlama"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Zil Sesi ve Titreşim"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Konferans görüşmesini yönet"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Acil durum numarası"</string>
-    <string name="dialpad_0_number" msgid="4644117034319354934">"0"</string>
-    <string name="dialpad_1_number" msgid="9005660581700930162">"1"</string>
-    <string name="dialpad_2_number" msgid="4037709919757417820">"2"</string>
-    <string name="dialpad_3_number" msgid="7146166309009131439">"3"</string>
-    <string name="dialpad_4_number" msgid="9075039274846639476">"4"</string>
-    <string name="dialpad_5_number" msgid="5780019709590672721">"5"</string>
-    <string name="dialpad_6_number" msgid="8261355170951265389">"6"</string>
-    <string name="dialpad_7_number" msgid="277455349526398354">"7"</string>
-    <string name="dialpad_8_number" msgid="4764964930466503513">"8"</string>
-    <string name="dialpad_9_number" msgid="4023642800448238950">"9"</string>
 </resources>
